# SCLAM-UAVs

./: .gitignore  README.md  control_plan.txt  control_plan_r.txt  error_to_home.py  launch.sh  launch2.sh  logfile_eh.csv  logfile_eh_X.csv  logfile_gp.csv  logfile_lc.csv  logfile_vp.csv  notes.txt  plot_gp.py  plot_lc.py  plot_vp.py
config/: quad_params [conflicted].yaml  quad_params.yaml
launch/: quad_slam.launch.py  quad_slam2.launch.py  test.launch.py
src/common/anms/: anms.cpp
src/control/: CMakeLists.txt  package.xml
src/control/src/: control_commands.cpp  control_component.cpp  control_component.hpp  control_sensor_callbacks.cpp  control_types.hpp  logger.hpp  parameters.hpp
src/globalslam/: CMakeLists.txt
src/globalslam/src/: cloop.cpp  cloop.hpp  cloop_get_pos.cpp  cloop_pose_slam.cpp  cloop_visual_match.cpp  globalslam_component.cpp  globalslam_component.hpp  globalslam_types.hpp  gmap.cpp  gmap.hpp  parameters.cpp  parameters.hpp
src/interfaces/: CMakeLists.txt
src/interfaces/msg/: Kf.msg  Lslam.msg  Rangetobase.msg  Robotstate.msg
src/keyboard/src/: keyboard_node.cpp
src/localslam/: CMakeLists.txt
src/localslam/src/: ekf.cpp  ekf.hpp  ekf_Jacobians.cpp  ekf_prediction.cpp  ekf_rangetobase_update (conflicted).cpp  ekf_rangetobase_update.cpp  ekf_visual_delete_feats.cpp  ekf_visual_init_feats.cpp  ekf_visual_match_feats.cpp  ekf_visual_update.cpp  localslam_component.cpp  localslam_component.hpp  localslam_types.hpp  parameters.cpp  parameters.hpp  sensors_callbacks.cpp
src/plot/src/: plot_component.cpp  plot_component.hpp
src/webot_package/: package.xml  setup.cfg  setup.py
src/webot_package/launch/: robot_launch.py
src/webot_package/resource/: webot_robot.urdf
src/webot_package/webot_package/: __init__.py  webot_robot_driver.py
src/webot_package/worlds/: .hall.wbproj  .mars.wbproj  .my_world.wbproj  .my_world_x.wbproj  hall.wbt  hall2.wbt  mars.wbt  my_world.wbt  my_world_x.wbt
src/webotbridge/: CMakeLists.txt  package.xml
src/webotbridge/src/: parameters.hpp  visibility_control.h  webotbridge_component.cpp  webotbridge_component.hpp
